--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ if (localStorage.getItem("userType") === "student") {
     adminButton.addEventListener('click', () => {
       const enteredPwd = prompt("Enter admin password:");
       if (enteredPwd === adminPassword) {
-        window.location.href = 'admin.html';
+        window.location.href = 'Admin.html';
       } else if (enteredPwd !== null) {
         alert("Incorrect password. Access denied.");
       }
